external-crates/move/crates/move-compiler/tests/move_check/expansion/spec_block_in_spec_context.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/spec_block_in_spec_context.move:3:5
  │
3 │     spec module {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/spec_block_in_spec_context.move:3:17
  │
3 │     spec module {
  │                 ^
  │                 │
  │                 Unexpected '{'
  │                 Expected an address or an identifier

